gcc/calls.c
@@ -529,6 +529,10 @@ emit_call_1 (rtx funexp, tree fndecl ATTRIBUTE_UNUSED, tree funtype ATTRIBUTE_UN
      if the context of the call as a whole permits.  */
   inhibit_defer_pop = old_inhibit_defer_pop;
 
+  /* Don't bother cleaning up after a noreturn function.  */
+  if (ecf_flags & (ECF_NORETURN | ECF_LONGJMP))
+    return;
+
   if (n_popped > 0)
     {
       if (!already_popped)
@@ -3074,6 +3078,10 @@ expand_call (tree exp, rtx target, int ignore)
 	    }
 
 	  emit_barrier_after (last);
+
+	  /* Stack adjustments after a noreturn call are dead code.  */
+	  stack_pointer_delta = old_stack_allocated;
+	  pending_stack_adjust = 0;
 	}
 
       if (flags & ECF_LONGJMP)
@@ -3304,8 +3312,9 @@ expand_call (tree exp, rtx target, int ignore)
 	  normal_call_insns = insns;
 
 	  /* Verify that we've deallocated all the stack we used.  */
-	  if (old_stack_allocated !=
-	      stack_pointer_delta - pending_stack_adjust)
+	  if (! (flags & (ECF_NORETURN | ECF_LONGJMP))
+	      && old_stack_allocated != stack_pointer_delta
+					- pending_stack_adjust)
 	    abort ();
 	}
 
